tests/fail/olasılık-yokluk-p3s-acc.kip
(* Possessive -i should not be accepted as accusative. *)
(bu tam-sayı olasılığının) değeri,
  yokluksa, 0;
  n'nin varlığıysa, n'dir.

(yokluğun değeri) yaz.
